<resources>
    <string name="app_name">Recipe App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">Log in</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="Sign_up">Sign up</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="body">Body</string>
    <string name="area">Area</string>
    <string name="details">Details</string>
    <string name="my_favourites">My Favourites</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sign_out">sign out</string>
    <string name="about">about</string>
    <string name="search">search</string>
    <string name="Home">Home</string>
    <string name="cancel">cancel</string>
    <string name="remove">remove</string>
    <string name="clear_category">Clear Category</string>
    <string name="ImEmpty">I\'m Empty!</string>
    <string name="addItem">Click  Add to Favourites</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>