<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aucthentication.Register.View.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange">

        <androidx.cardview.widget.CardView
            android:layout_width="357dp"
            android:layout_height="725dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:elevation="10sp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">

                <TextView
                    android:id="@+id/register_centerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/signup"
                    android:textColor="@color/dark_blue"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_Fname_InputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_centerText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_nameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_secName_InputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_Fname_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_SecName_TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/second_name"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_InputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_secName_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_InputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:counterTextColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password_TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_confirmPassword_InputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:counterTextColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.481"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_password_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_confirmPassword_TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register_signupBtn"
                    android:layout_width="209dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/Sign_up"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_confirmPassword_InputLayout" />

                <Button
                    android:id="@+id/register_loginBtn"
                    android:layout_width="209dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_signupBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>