<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:id="@+id/login_fragment"
    tools:context=".Aucthentication.Login.View.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="10sp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="633dp"
                android:background="@color/light_blue">


                <TextView
                    android:id="@+id/login_centerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="95dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login"
                    android:textColor="@color/dark_blue"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_emailInputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="260dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:helperTextTextColor="@color/orange"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintBottom_toTopOf="@+id/login_passwordInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_emailInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_passwordInputLayout"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="330dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="24dp"
                    android:textColorHint="@color/dark_blue"
                    app:boxStrokeColor="@color/dark_blue"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:counterTextColor="@color/dark_blue"
                    app:cursorColor="@color/dark_blue"
                    app:endIconMode="password_toggle"
                    app:helperTextTextColor="@color/orange"
                    app:endIconTint="@color/dark_blue"
                    app:hintTextColor="@color/dark_blue"
                    app:layout_constraintBottom_toTopOf="@id/login_loginBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_emailInputLayout"
                    app:layout_constraintVertical_bias="0.0"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_passwordInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_signupBtn"
                    android:layout_width="209dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/Sign_up"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_loginBtn" />

                <Button
                    android:id="@+id/login_loginBtn"
                    android:layout_width="209dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="49dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_passwordInputLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>